--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "db:generate": "drizzle-kit generate",
     "db:up": "drizzle-kit up",
     "db:push": "drizzle-kit push",
-    "execute:D1:db": "wrangler d1 execute todoaPP --local --file "
+    "db:migrate:local": "pnpm wrangler d1 migrations apply todoaPP --local"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
