--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -8,7 +8,8 @@
   "main": "worker/index.ts",
   "compatibility_date": "2025-05-25",
   "assets": {
-    "not_found_handling": "single-page-application"
+    "not_found_handling": "single-page-application",
+    "directory": ""
   },
   "observability": {
     "enabled": true
