--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -9,7 +9,7 @@
   "compatibility_date": "2025-05-25",
   "assets": {
     "not_found_handling": "single-page-application",
-    "directory": ""
+    "directory": "./public"
   },
   "observability": {
     "enabled": true
