Fix command to run deployment in GitHub Actions workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         run: pnpm install
 
       - name: install dependencies
-        run: pnpm deploy
+        run: pnpm run deploy
 
       - name: Build & Deploy Worker
         uses: cloudflare/wrangler-action@v3
