--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -8,8 +8,7 @@
   "main": "worker/index.ts",
   "compatibility_date": "2025-05-25",
   "assets": {
-    "not_found_handling": "single-page-application",
-    "directory": "./dist/client"
+    "not_found_handling": "single-page-application"
   },
   "observability": {
     "enabled": true
