--- a/tsconfig.worker.json
+++ b/tsconfig.worker.json
@@ -2,7 +2,11 @@
   "extends": "./tsconfig.node.json",
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.worker.tsbuildinfo",
-    "types": ["./worker-configuration.d.ts", "vite/client"]
+    "types": [
+      "./worker-configuration.d.ts",
+      "vite/client",
+      "./node_modules/@types/node/events.d.ts"
+    ]
   },
   "include": ["./worker-configuration.d.ts", "./worker"]
 }
