--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "drizzle-orm": "^0.43.1",
     "motion": "^12.15.0",
     "mysql2": "^3.14.1",
+    "openai": "^5.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
